@@ -1,0 +1,13 @@
+quasiquote006.idr:9:3:
+When elaborating right hand side of b:
+Can't disambiguate name: ForeignEnv.Nil, 
+                         Prelude.List.Nil
+quasiquote006.idr:12:3:
+When elaborating right hand side of c:
+No such variable alsdkjflkj
+quasiquote006.idr:15:3:
+When elaborating right hand side of d:
+Can't disambiguate name: ForeignEnv.::, 
+                         Prelude.List.::, 
+                         Prelude.Stream.::
+quasiquote006.idr:17:3:Main.d already defined
