@@ -1,0 +1,3 @@
+#!/usr/bin/env bash
+idris $@ --check --nocolour --quiet --consolewidth 70 quasiquote006.idr
+rm -f *.ibc
