@@ -31,6 +31,8 @@ New in 0.9.18:
 * The return types of `Vect.findIndex`, `Vect.elemIndex` and
   `Vect.elemIndexBy` were changed from `Maybe Nat` to `Maybe (Fin n)`
 * A new :browse command shows the contents of a namespace
+* `{n} is syntax for a quotation of the reflected representation of the global
+  name n, if it is uniquely determined
 
 New in 0.9.17:
 --------------
